Fix css styles for large datasets. Filter text-overflow set to ellipsis, all species shown in 3 columns with scroll.

--- a/webserver/pytreedb_server/static/styles/style.css
+++ b/webserver/pytreedb_server/static/styles/style.css
@@ -283,6 +283,8 @@ input.warning, input.warning:hover, a.warning, a.warning:hover {
 .fieldValue {
     width: 65%;
     background-color: #fff;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .addFilterBtn::after {
